vpc.tf
data "aws_availability_zones" "available" {}

resource "aws_vpc" "ssp-vpc" {
  cidr_block = "10.0.0.0/16"

  tags = "${
    map(
     "Name", "terraform-eks-node",
     "kubernetes.io/cluster/${var.cluster-name}", "shared"
    )
  }"
}

resource "aws_subnet" "ssp-subnets" {
  count = 2
  map_public_ip_on_launch = true
  availability_zone = "${data.aws_availability_zones.available.names[count.index]}"
  cidr_block        = "10.0.${count.index}.0/24"
  vpc_id            = "${aws_vpc.ssp-vpc.id}"

  tags = "${
    map(
     "Name", "terraform-eks-node",
     "kubernetes.io/cluster/${var.cluster-name}", "shared"
    )
  }"
}

resource "aws_internet_gateway" "igw" {
  vpc_id = "${aws_vpc.ssp-vpc.id}"

  tags = {
    Name = "terraform-eks"
  }
}

resource "aws_route_table" "rtb" {
  vpc_id = "${aws_vpc.ssp-vpc.id}"

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.igw.id}"
  }
}

resource "aws_route_table_association" "rtb-association" {
  count = 2

  subnet_id      = "${aws_subnet.ssp-subnets.*.id[count.index]}"
  route_table_id = "${aws_route_table.rtb.id}"
}
